--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "react": "^19.2.0",
+    "react-bootstrap": "^3.0.0-beta.5",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
