--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "bootstrap": "^5.0.2",
     "react": "^19.2.0",
     "react-bootstrap": "^3.0.0-beta.5",
