--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.0.2",
     "react": "^19.2.0",
     "react-bootstrap": "^3.0.0-beta.5",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
