--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "axios": "^1.13.2",
     "bootstrap": "^5.0.2",
     "react": "^19.2.0",
     "react-bootstrap": "^3.0.0-beta.5",
